# ys_proto

./: .hgignore  CMakeCache.txt  CMakeLists.txt  Makefile  Makefile.orig  buildunix  check_pt_inc  check_pt_src  cmake_clean  cmake_install.cmake  cp1.txt  cp1.txt~  debug.cpp  debug.h  example.txt  files  log.xml  main.cpp  make  makedebug  midohiol.race  read_webpage.txt  stringarray.cpp  tests.cpp  ys_proto.cbp  ys_proto.depend  ys_proto.layout  ys_proto_build_log.html
.git-CONFLICT-d41d8cd98f00b204e9800998ecf8427e/: FETCH_HEAD  ORIG_HEAD  index
.git-CONFLICT-d41d8cd98f00b204e9800998ecf8427e/logs/refs/: stash
.git-CONFLICT-d41d8cd98f00b204e9800998ecf8427e/objects/pack/: pack-f73a5d53a2752d60f7d5f24e864a434edfa1b2f4.idx  pack-f73a5d53a2752d60f7d5f24e864a434edfa1b2f4.pack
.git-CONFLICT-d41d8cd98f00b204e9800998ecf8427e/refs/: stash
.git-CONFLICT-d41d8cd98f00b204e9800998ecf8427e/refs/heads/: master
apps/: activity_message.cpp  apps.cpp  apps.h  ysclient.cpp  ysclient.h  ysclientActions.cpp
doc/latex/: .ys_proto.tex.swp  ys_proto.tex
include/: test.h
include/apps/: apps.h  ysclient.h
include/serialization/: acknowledge.h  airDisplayOpt.h  airList.h  flight.h  ground.h  header.h  int.h  login.h  map.h  message.h  missileOpt.h  userlist.h  weather.h
include/sockets/: linux.h  windows.h
include/types/: includeAll.h  stringarray.h
include/types/ys/: login.h  tairList.h
include/ys_proto/apps/: apps.h  ysclient.h
include/ys_proto/output/: xmlLog.h
include/ys_proto/serialization/: acknowledge.h  airDisplayOpt.h  airList.h  damage.h  flight.h  ground.h  header.h  includeAll.h  int.h  left.h  login.h  map.h  message.h  missileOpt.h  (+3 more)
serialization/: acknowledge.h  ackowledge.cpp  airDisplayOpt.cpp  damage.h  endianess.cpp  flight.cpp  ground.cpp  ground.h  header.cpp  includeAll.cpp  left.cpp  login.h  map.cpp  map.h  missileOpt.cpp  userlist.cpp  weather.cpp
sniff/: full_login_ground.txt
sockets/: linux.cpp  socketYS.cpp
src/: debug.cpp  main.cpp  test.cpp  tests.cpp
src/apps/: activity_message.cpp  apps.cpp  ysclient.cpp  ysclientActions.cpp
src/output/: xmlLog.cpp
src/serialization/: ackowledge.cpp  airDisplayOpt.cpp  airList.cpp  damage.cpp  endianess.cpp  flight.cpp  ground.cpp  header.cpp  includeAll.cpp  int.cpp  left.cpp  login.cpp  map.cpp  message.cpp  missileOpt.cpp  unpack.cpp  userlist.cpp  weather.cpp
src/sockets/: linux.cpp  socketYS.cpp  windows.cpp
src/types/: includeall.cpp  stringarray.cpp
types/: stringarray.cpp
types/ys/: includeAll.cpp  tdamage.cpp  tflight.cpp  tground.cpp  theader.cpp  tint.cpp
(+21 files in other folders)
